# Kosmographica-Core

./: .gitignore  project_rules.md
backend/: Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: README.md  env.py
backend/alembic/versions/: 2329b33557bf_initial.py  5d4e8c2b1a90_long_term_query_indexes.py  7b8c9d0e1f23_conversations.py  9f2c1a7b4d30_graph_query_indexes.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/models/: __init__.py  conversation.py  document.py  global.py  graph.py  jobs.py  knowledge.py  workspace.py
backend/app/providers/: __init__.py  anthropic_provider.py  base.py  factory.py  local_provider.py  openai_provider.py
backend/app/routers/: clusters.py  conversations.py  cross_project.py  documents.py  entities.py  export.py  graph.py  processing.py  research_notes.py  search.py  workspaces.py
backend/app/schemas/: common.py
backend/app/services/: chunking.py  claim_extraction.py  clustering.py  concept_extraction.py  cross_project.py  embedding.py  entity_extraction.py  export.py  graph_builder.py  graph_search.py  parsing.py  processing.py  rag.py  search.py  vector_search.py
backend/app/tools/: __init__.py  admin.py  cli.py  client.py  config.py  errors.py  formatters.py  mcp_server.py
backend/app/workers/: __init__.py  broker.py  graph.py  ingestion.py
backend/tests/: conftest.py  test_local_extraction.py  test_parsing.py  test_rag_local_provider.py  test_tools.py
docs/: kosmo-tools.md
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/lib/: api.ts  (+2 more)
(+47 files in other folders)
