[project]
name = "kosmographica-backend"
version = "0.1.0"
description = "FastAPI backend for the Kosmographica Graph RAG Research OS."
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.34,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "greenlet>=3.0,<4.0",
  "asyncpg>=0.30,<1.0",
  "alembic>=1.15,<2.0",
  "pydantic>=2.10,<3.0",
  "pydantic-settings>=2.8,<3.0",
  "dramatiq[rabbitmq]>=1.17,<2.0",
  "anthropic>=0.49,<1.0",
  "openai>=1.68,<2.0",
  "pgvector>=0.3,<1.0",
  "pymupdf>=1.25,<2.0",
  "python-docx>=1.1,<2.0",
  "beautifulsoup4>=4.13,<5.0",
  "httpx>=0.28,<1.0",
  "python-multipart>=0.0.20,<1.0",
  "tiktoken>=0.9,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.25,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
